k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-service
spec:
  selector:
    app: backoffice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP  # เปลี่ยนจาก NodePort เป็น ClusterIP
